--- a/webroot/index.html
+++ b/webroot/index.html
@@ -5,13 +5,20 @@
     <title>Welcome to KRY</title>
 </head>
 <body>
-KRY status poller
-<ul id="service-list">
-</ul>
-<input type="text" id="url-name">
-<button id="post-service">Save</button>
+    <h2>KRY status poller</h2>
+    <ul id="service-list">
+    </ul>
+    <div>
+        <label>Name</label>
+        <input type="text" id="name">
+    </div>
+    <div>
+        <label>URL</label>
+        <input type="text" id="url">
+    </div>
+    <button id="post-service">Save</button>
 
 </body>
-<script src="static/code.js">
+<script src="./static/code.js">
 </script>
 </html>
